--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.3",
+    "camelcase-keys": "^9.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
+    "immer": "^10.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.446.0",
     "next": "15.1.0",
     "react": "19.0.0",
@@ -25,7 +30,8 @@
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
