--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "zod": "^3.23.8",
     "zustand": "^5.0.2"
   },
