--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "immer": "^10.1.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.446.0",
-    "next": "15.1.0",
+    "next": "15.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.53.2",
-    "recharts": "^2.12.7",
+    "react-smooth": "^4.0.4",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
@@ -40,7 +41,7 @@
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
     "eslint": "^8",
-    "eslint-config-next": "15.1.0",
+    "eslint-config-next": "15.1.6",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
     "typescript": "^5"
